// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot: cur report defaults 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CurBucketId63DADEFC": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketName": "cur-bucket-name",
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "CurBucketIdPolicy098FAE91": {
      "Properties": {
        "Bucket": {
          "Ref": "CurBucketId63DADEFC",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetBucketAcl",
                "s3:GetBucketPolicy",
              ],
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "CurBucketId63DADEFC",
                  "Arn",
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "CurBucketId63DADEFC",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ReportDefinitionIdReportDefinitionIdResource5880FDCB": {
      "DependsOn": [
        "CurBucketIdPolicy098FAE91",
      ],
      "Properties": {
        "Compression": "GZIP",
        "Format": "textORcsv",
        "RefreshClosedReports": true,
        "ReportName": "ReportDefinitionName",
        "ReportVersioning": "OVERWRITE_REPORT",
        "S3Bucket": {
          "Ref": "CurBucketId63DADEFC",
        },
        "S3Prefix": "ReportDefinitionPrefix",
        "S3Region": "\${Token[AWS",
        "TimeUnit": "DAILY",
      },
      "Type": "AWS::CUR::ReportDefinition",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;

exports[`snapshot: cur report spec'd out 1`] = `
{
  "Parameters": {
    "BootstrapVersion": {
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
      "Type": "AWS::SSM::Parameter::Value<String>",
    },
  },
  "Resources": {
    "CurBucketId63DADEFC": {
      "DeletionPolicy": "Retain",
      "Properties": {
        "BucketName": "cur-bucket-name",
      },
      "Type": "AWS::S3::Bucket",
      "UpdateReplacePolicy": "Retain",
    },
    "CurBucketIdPolicy098FAE91": {
      "Properties": {
        "Bucket": {
          "Ref": "CurBucketId63DADEFC",
        },
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "s3:GetBucketAcl",
                "s3:GetBucketPolicy",
              ],
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::GetAtt": [
                  "CurBucketId63DADEFC",
                  "Arn",
                ],
              },
            },
            {
              "Action": "s3:PutObject",
              "Condition": {
                "StringEquals": {
                  "aws:SourceAccount": {
                    "Ref": "AWS::AccountId",
                  },
                  "aws:SourceArn": {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":cur:us-east-1:",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":definition/*",
                      ],
                    ],
                  },
                },
              },
              "Effect": "Allow",
              "Principal": {
                "Service": "billingreports.amazonaws.com",
              },
              "Resource": {
                "Fn::Join": [
                  "",
                  [
                    {
                      "Fn::GetAtt": [
                        "CurBucketId63DADEFC",
                        "Arn",
                      ],
                    },
                    "/*",
                  ],
                ],
              },
            },
          ],
          "Version": "2012-10-17",
        },
      },
      "Type": "AWS::S3::BucketPolicy",
    },
    "ReportDefinitionIdReportDefinitionIdResource5880FDCB": {
      "DependsOn": [
        "CurBucketIdPolicy098FAE91",
      ],
      "Properties": {
        "AdditionalArtifacts": [
          "REDSHIFT",
        ],
        "AdditionalSchemaElements": [
          "ReportDefinitionAdditionalSchemaElements",
        ],
        "BillingViewArn": "ReportDefinitionBillingViewArn",
        "Compression": "ZIP",
        "Format": "Parquet",
        "RefreshClosedReports": true,
        "ReportName": "ReportDefinitionName",
        "ReportVersioning": "CREATE_NEW_REPORT",
        "S3Bucket": {
          "Ref": "CurBucketId63DADEFC",
        },
        "S3Prefix": "ReportDefinitionPrefix",
        "S3Region": "\${Token[AWS",
        "TimeUnit": "MONTHLY",
      },
      "Type": "AWS::CUR::ReportDefinition",
    },
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5",
                  ],
                  {
                    "Ref": "BootstrapVersion",
                  },
                ],
              },
            ],
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
        },
      ],
    },
  },
}
`;
